server.log
file:///Users/pareshsuthar/Desktop/fitness/server/index.js:118
});
 ^

SyntaxError: missing ) after argument list
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:540:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:587:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:162:19)

Node.js v22.19.0
